fixed dropdown shifting entire page

--- a/src/country.css
+++ b/src/country.css
@@ -96,22 +96,23 @@ font-weight: 900;
 /*desktop view*/
 @media(min-width: 1440px){
     .country {
-        max-width: 1600px;
+        max-width: 1500px;
       }
 
     .btn{        
         padding-left: 25px;
         padding-right: 30px;
-        margin-left: 120px;
+        margin-left: 170px;
         margin-top: 80px;
+        
         
     }
 
     .country article .country-details{
-      margin-top: -10px;
+      margin-top: -30px;
     }
     .country article .flag{
-      margin-top: -30px;
+      margin-top: 10px;
     }
 
     .country article .country-inner {
@@ -123,8 +124,8 @@ font-weight: 900;
       .country article .flag img{
         border-radius: 10px;
         border: none;
-        width: 100%;
-        height: 400px;
+        width: 750px;
+        height: 450px;
 
       }
 
@@ -138,7 +139,7 @@ font-weight: 900;
 
       .country article .border-bottom{
         margin-left: 60%;
-        margin-top: -90px;
+        margin-top: -150px;
       }
       .country article .country-details .right{
         margin-top: 28%;
